--- a/xUnitTest/SGE.Test.csproj
+++ b/xUnitTest/SGE.Test.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
     <PackageReference Include="Moq" Version="4.16.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.11" />
   </ItemGroup>
 
   <ItemGroup>
