--- a/front/nginx-custom.conf
+++ b/front/nginx-custom.conf
@@ -1,8 +1,34 @@
 server {
-  listen 80;
-  location / {
-    root /usr/share/nginx/html;
-    index index.html index.htm;
-    try_files $uri $uri/ /index.html;
-  }
+    listen 80;
+    server_name sge.pereiraanderson.com;
+    location / {
+	    return 301 https://$host$request_uri;
+    }
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+}
+
+server {
+    # SSL configuration
+
+    listen 443 ssl;
+    server_name sge.pereiraanderson.com;
+
+    ssl_certificate /etc/letsencrypt/live/sge.pereiraanderson.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/sge.pereiraanderson.com/privkey.pem;
+
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html;
+    }
+
+    location /api/ {
+        proxy_pass         http://sge-back;
+    }
 }
