--- a/back/appsettings.Development.json
+++ b/back/appsettings.Development.json
@@ -5,7 +5,7 @@
     }
   },
   "ConnectionStrings": {
-    "SqlServerSGE": "Server=localhost;Initial Catalog=SGE;Persist Security Info=True;User ID=SA;Password=KQSXJVSnjCQHFvxaePD5p5cey5wyzn3F;MultipleActiveResultSets=True;TrustServerCertificate=True;Connection Timeout=30;"
+    "SqlServerSGE": "Server=database-sge.cs69n9wjqt6h.sa-east-1.rds.amazonaws.com;Initial Catalog=SGE;Persist Security Info=True;User ID=admin;Password=4c7XchvS6yWTAfs;MultipleActiveResultSets=True;TrustServerCertificate=True;Connection Timeout=30;"
   },
   "Autentication": {
     "Issue": "Auth",
